ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/parserObjectCreationArrayLiteral1/input.ts.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/parserObjectCreationArrayLiteral1/input.ts:1:9
  |
1 | new Foo[];
  |         ^

